--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LoveReign Santa Finder</title>
+    <title>LoveReign Santa Finder 🎄</title>
+    <meta name="description" content="Join the LoveReign Bible Church Secret Santa event! Register, pick your lucky number, and spread the Christmas joy.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://secretsanta.teedup.xyz/">
+    <meta property="og:title" content="LoveReign Santa Finder 🎄">
+    <meta property="og:description" content="Join the LoveReign Bible Church Secret Santa event! Register, pick your lucky number, and spread the Christmas joy.">
+    <meta property="og:image" content="/og-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://secretsanta.teedup.xyz/">
+    <meta property="twitter:title" content="LoveReign Santa Finder 🎄">
+    <meta property="twitter:description" content="Join the LoveReign Bible Church Secret Santa event! Register, pick your lucky number, and spread the Christmas joy.">
+    <meta property="twitter:image" content="/og-image.png">
   </head>
   <body>
     <div id="root"></div>
